--- a/.github/workflows/experiment-001.yml
+++ b/.github/workflows/experiment-001.yml
@@ -29,5 +29,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        echo Random text ---- Add other actions to build,
+        echo Random text ---- test, and deploy your project.
